<resources>
    <string name="app_name">Recycler with Adapater Error </string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vahicle_model">Vahicle Model</string>
    <string name="compnay_name">Compnay Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_model">Enter Model</string>
    <string name="enter_company">Company</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="show_postion">Show position</string>
    <string name="listofdata">List of Data</string>
</resources>